force-app/main/default/objects/Krow__Intacct_Integration__c/Krow__Intacct_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used to store whole data required for the Intacct Integration purpose.</description>
    <label>Intacct Integration</label>
</CustomObject>