force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Company_Id__c</fullName>
    <description>Intacct account company id of the user which is used to login in intacct enviornment.</description>
    <inlineHelpText>Intacct account company id of the user which is used to login in intacct enviornment.</inlineHelpText>
    <label>Company Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>