force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Default_Department__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Department__c</fullName>
    <description>If a value is here, it will be passed as the Department field value on the Invoice Line Item.</description>
    <label>Default Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>