force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Default_Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Expense_Type__c</fullName>
    <description>Default expense type for expense posting if no account code is specified on expense type</description>
    <label>Default Expense Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>