force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Default_Intacct_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Intacct_Company_Id__c</fullName>
    <description>This is used to post the data(project/task/timesheet etc.) in the company(Location).</description>
    <inlineHelpText>Default entity(intacct) id to post data.</inlineHelpText>
    <label>Default Intacct Company Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>