force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Default_Invoice_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Invoice_Account_Code__c</fullName>
    <description>To be used when no account code is specified in invoice intacct account id field.</description>
    <label>Default Invoice Account Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>