force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Default_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Default_Item_Id__c</fullName>
    <description>This field is used to hold the Item Id, which can be used for posting a billable task.</description>
    <label>Default Item Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>