force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Enable_Entity_Level_Sync__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Entity_Level_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag controls to sync Customers, Projects, Vendors, Employees etc. at Entity Level else these items will be synced at Top Level.</description>
    <label>Enable Entity Level Sync</label>
    <type>Checkbox</type>
</CustomField>