force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Record_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Krow__Record_Prefix__c</fullName>
    <description>Prefix to be added in any auto number sequencing in intacct syncing process</description>
    <label>Project Record Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>