force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Record_Starting_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__Record_Starting_Number__c</fullName>
    <description>Used to generate auto number process while posting in intacct</description>
    <label>Project Record Starting Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>