force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Resource_Starting_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__Resource_Starting_Number__c</fullName>
    <label>Resource Starting Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>