force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sender_Id__c</fullName>
    <description>This is an id which will be provided by intacct for consuming API .</description>
    <inlineHelpText>This is an id which will be provided by intacct for consuming API .</inlineHelpText>
    <label>Sender Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>