force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Sync_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To decide whether invoices need to be synced from klient to intacct</description>
    <inlineHelpText>To decide whether invoices need to be synced from krow to intacct</inlineHelpText>
    <label>Sync Invoices</label>
    <type>Checkbox</type>
</CustomField>