force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Sync_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Tasks</label>
    <type>Checkbox</type>
</CustomField>