force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Sync_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_Vendors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Vendors</label>
    <type>Checkbox</type>
</CustomField>