force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__User_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__User_Id__c</fullName>
    <description>Intacct account user id</description>
    <inlineHelpText>Intacct account user id</inlineHelpText>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>