force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__User_Password__c.field-meta.xml
<CustomField>
    <fullName>Krow__User_Password__c</fullName>
    <description>Intacct account password</description>
    <inlineHelpText>Intacct account password</inlineHelpText>
    <label>User Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>