force-app/main/default/objects/Krow__Intacct_Integration__c/fields/Krow__Vendor_Record_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Krow__Vendor_Record_Prefix__c</fullName>
    <label>Vendor Record Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>